--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,9 +50,8 @@
   </ul>
 </nav>
 
-<div class="main no-gutters">
-  <div class="col-sm">
-
+<div class="main no-gutters col-sm" style="flex-flow: column">
+  <!-- <div class="col-sm"> -->
 
     <div class="row header">
 
@@ -81,7 +80,6 @@
       <mat-icon id="arrowBtn" (click)="moveTo('arrowBtn')" class="title-arrow text-center">keyboard_arrow_down</mat-icon>
 
     </div>
-
 
     <div class="row content" id="nav-trigger">
 
@@ -191,7 +189,8 @@
 
 
     </div>
-  </div>
+
+  <!-- </div> -->
 </div>
 
 
@@ -258,7 +257,7 @@
 
             <div class="single">
               <mat-icon class="md-light">movie</mat-icon>
-              <a href="https://www.youtube.com/user/VMLKAIST" style="font-size: 14px; color: white;">Youtube Channel</a>
+              <a href="https://www.youtube.com/user/VMLKAIST" style="font-size: 13px; color: rgba(255, 255, 255, 0.6);">Youtube Channel</a>
             </div>
 
           </div>
