--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -48,6 +48,7 @@
   // top: -80px;
   background-color: rgba(255, 255, 255, 0);
   .navbar-brand {
+    margin:auto;
     img {
       filter: contrast(0) brightness(100);
     }
