--- a/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
+++ b/src/app/main/main-content/research-publicate-individual/research-publicate-individual.component.scss
@@ -7,16 +7,11 @@
 }
 .publication-title {
     margin-bottom: 3.5rem;
-    max-width: 1000px;
+    max-width: 1600px;
 }
 .row {
     margin: 3.5rem 4rem 6rem 4rem;
-}
-
-@media (max-width: 576px) {
-    .row {
-        margin: 3.5rem 1.5rem 6rem 1.5rem;
-    }
+    flex-flow: column;
 }
 
 .row {
@@ -42,13 +37,14 @@
 .imgDiv {
     margin: 1.5rem 0;
     width:100%;
+    max-width: 2000px;
     .max-img {
         width: 100%;
     }
 }
 
 .abstract {
-    max-width: 1000px;
+    max-width: 1600px;
     line-height: 2;
     p {
         text-align: justify;
@@ -60,7 +56,7 @@
 }
 .video-item {
     width:100%;
-    max-width: 1000px;
+    max-width: 1600px;
     margin-top: 20px;
     margin-bottom: 1.5rem;
     img {
@@ -95,5 +91,14 @@
 }
 
 .subImgDiv {
-    max-width: 1000px;
+    max-width: 1600px;
+}
+
+@media (max-width: 576px) {
+    .row {
+        margin: 3.5rem 1.5rem 6rem 1.5rem;
+    }
+    p {
+        text-align: left;
+    }
 }
