--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,7 +66,7 @@
 
       <div class="title text-center">
         <div class="display-2 title-text">VISUAL MEDIA LAB</div>
-        <h3 class="title-text">Where Creativity Meets Techonology</h3>
+        <h3 class="title-text">Where Creativity Meets Technology</h3>
         <p class="title-text">focuses on developing fundamental computer graphics technology and software applications specifically for the creation
           of movie visual effects and animated films. Since its foundation in 2006, VML has emphasized both R&D and contens
           production as a core part of lab activity. About 20 Ph.D. and master program students along have published numerous
