--- a/src/app/main/main-content/about-equip/about-equip.component.html
+++ b/src/app/main/main-content/about-equip/about-equip.component.html
@@ -31,13 +31,25 @@
               >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt2.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt2.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt2.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt3.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt3.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt3.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt4.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt4.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mpt/mpt4.jpg")'
+              >
         </div>
       </div>
 
@@ -45,13 +57,25 @@
         <h3 class="equipment-title col-sm-12">Motion Capture System</h3>
 
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap1.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap1.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap1")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap2.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap2.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap2.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap3.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap3.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/mocap/mocap3.jpg")'
+              >
         </div>
       </div>
     
@@ -59,13 +83,25 @@
         <h3 class="equipment-title col-sm-12">Stereoscopic System</h3>
 
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo1.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo1.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo1.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo2.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo2.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo2.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo3.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo3.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/stereo/stereo3.jpg")'
+              >
         </div>
       </div>
 
@@ -73,13 +109,25 @@
         <h3 class="equipment-title col-sm-12">Multi Projection Room</h3>
 
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_0.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_0.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_0.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_1.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_1.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_1.jpg")'
+              >
         </div>
         <div class="equipment-box col-sm-12 col-md-4 col-lg-3">
-          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_5.jpg">
+          <img class="img-fluid" src="http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_5.jpg" 
+              data-toggle="modal" 
+              data-target="#selectedImageModal" 
+              (click)='setSelectedImage("http://vml.kaist.ac.kr:3000/img/life/pictures/Equipments_and_Devices/CFL2/CFLL_upload_5.jpg")'
+              >
         </div>
       </div>
 
