--- a/src/app/main/main-content/research-publicate/research-publicate.component.html
+++ b/src/app/main/main-content/research-publicate/research-publicate.component.html
@@ -9,11 +9,11 @@
 
       <div *ngFor="let publication of data" class="data-box">
         <div class="data-img">
-          <img default="./../../../../assets/Contents/imgs/no_image.jpg" 
+          <!-- <img default="./../../../../assets/Contents/imgs/no_image.jpg" 
               [srcset]= 'imgPath + publication.img + " 800w, " +
                         imgPath+ publication.smallImg + " 300w "'
-              sizes="(min-width:990px) 300px, 800px">
-          <!-- <img default="./assets/imgs/no_image.jpg" [srcset]=" imgPath + publication.img" [src]=" imgPath + publication.img"> -->
+              sizes="(min-width:990px) 300px, 800px"> -->
+          <img default="./assets/imgs/no_image.jpg" [srcset]=" imgPath + publication.smallImg" [src]=" imgPath + publication.smallImg">
         </div>
         <div class="data-desc">
           <a [routerLink]='[ "individual", publication.id]' class="h3" >{{publication.title}}</a>
