--- a/src/app/main/main-content/member-student-individual/member-student-individual.component.html
+++ b/src/app/main/main-content/member-student-individual/member-student-individual.component.html
@@ -63,9 +63,8 @@
           <h3>Projects</h3>
           <table class="table">
             <tbody>
-              <tr *ngFor="let pro of person.projects | orderBy:order:ascending">
-
-                <td class="table-left">{{pro.year}}</td>
+              <tr *ngFor="let pro of person.projects.reverse()  ">
+                <td class="table-left">{{pro.header}}</td>
                 <td>
                   <p>{{pro.name}}</p>
                 </td>
